--- a/app/src/main/res/layout/activity_form_cadastro.xml
+++ b/app/src/main/res/layout/activity_form_cadastro.xml
@@ -4,6 +4,88 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".FormCadastro">
+
+    <ImageView
+        android:id="@+id/icon_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/login"
+        android:contentDescription="Login Icon"
+        android:layout_margin="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:contentDescription="Fachada da faculdade"
+        android:src="@drawable/gym"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/title_cadastro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cadastre-se"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
+
+    <View
+        android:id="@+id/containercomponents"
+        style="@style/ContainerComponents"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_cadastro" />
+
+    <EditText
+        android:id="@+id/edit_nome"
+        style="@style/EditText"
+        android:drawableRight="@drawable/person"
+        android:hint="nome"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="@+id/containercomponents"
+        app:layout_constraintStart_toStartOf="@+id/containercomponents"
+        app:layout_constraintTop_toTopOf="@+id/containercomponents" />
+
+    <EditText
+        android:id="@+id/edit_email"
+        style="@style/EditText"
+        android:drawableRight="@drawable/email"
+        android:hint="E-mail"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="@+id/containercomponents"
+        app:layout_constraintStart_toStartOf="@+id/containercomponents"
+        app:layout_constraintTop_toBottomOf="@+id/edit_nome" />
+
+    <EditText
+        android:id="@+id/edit_senha"
+        style="@style/EditText"
+        android:drawableRight="@drawable/senha"
+        android:hint="Senha"
+        android:inputType="textPassword"
+        android:maxLength="25"
+        app:layout_constraintEnd_toEndOf="@+id/containercomponents"
+        app:layout_constraintStart_toStartOf="@+id/containercomponents"
+        app:layout_constraintTop_toBottomOf="@+id/edit_email"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_cadastrar"
+        style="@style/button"
+        android:text="Cadastrar"
+        android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/containercomponents"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
