--- a/app/src/main/res/layout/activity_form_login.xml
+++ b/app/src/main/res/layout/activity_form_login.xml
@@ -56,6 +56,7 @@
             style="@style/EditText"
             android:drawableRight="@drawable/email"
             android:hint="E-mail"
+            android:text="maxley.costa@aluno.imepac.edu.br"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@+id/containercomponents"
             app:layout_constraintStart_toStartOf="@+id/containercomponents"
@@ -66,6 +67,7 @@
             style="@style/EditText"
             android:drawableRight="@drawable/senha"
             android:hint="Senha"
+            android:text="@123456"
             android:inputType="textPassword"
             android:maxLength="25"
             app:layout_constraintEnd_toEndOf="@+id/containercomponents"
